# andron

./: .gitignore  CMakeLists.txt  main.c
Include/: base_types.h  constants.h  dynamic_array.h  hashing.h  object.h
Include/tools/: bit_operations.h  error.h  hashing.h  math.h
Include/types/: base_types.h  dictionary.h  dynamic_array.h  exceptions.h  linked_list.h  object.h
Tools/: bit_operations.c  error.c  hashing.c  math.c
Types/: base_types.c  dictionary.c  dynamic_array.c  exceptions.c  linked_list.c  object.c
executable/: dictTools.c
header/: dictTools.h
